--- a/Retake/02. Catering_Ресурси/02. Catering/responsive.css
+++ b/Retake/02. Catering_Ресурси/02. Catering/responsive.css
@@ -1,1 +1,24 @@
 /* TODO: Add the responsive styles here */
+
+@media all and (max-width: 600px) {
+   .w3-right.w3-hide-small {
+       display: none;
+   }
+
+    .w3-col.m6.w3-padding-large.w3-hide-small {
+        display: none;
+    }
+
+   .w3-col.m6.w3-padding-large {
+       width: 100%;
+   }
+
+   .w3-row.w3-padding-64 {
+       display: flex;
+       flex-direction: column;
+   }
+
+   .w3-col.l6.w3-padding-large {
+       width: 100%;
+   }
+}
